# QiTianAircraft

./: README.md
pcb/QiTian Mini Flight Control/QiTian Mini Flight Control/: QiTian Mini Flight Control.PcbDoc  QiTian Mini Flight Control.PcbLib  QiTian Mini Flight Control.SchDoc  QiTian Mini Flight Control.SchLib  QiTian Mini Flight control.PrjPcb  QiTian Mini Flight control.PrjPcbStructure
pcb/QiTian Mini Remote Control/QiTian Mini Remote Control/: QiTian Mini Remote Control.PcbDoc  QiTian Mini Remote Control.PcbLib  QiTian Mini Remote Control.PrjPcb  QiTian Mini Remote Control.PrjPcbStructure  (+2 more)
src/QiTianControl/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig
src/QiTianFlightControl/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig
src/QiTianFlightControl/main/: CMakeLists.txt  i2c.cpp  main.cpp
src/QiTianFlightControl/main/Aircraft/: Aircraft.cpp  Aircraft.h
src/QiTianFlightControl/main/Barometer/: Barometer.cpp  Barometer.h
src/QiTianFlightControl/main/Compass/: Compass.cpp  Compass.h
src/QiTianFlightControl/main/Driver/: Driver.h  PostionPIDCtr.cpp  PostionPIDCtr.h
src/QiTianFlightControl/main/Esc/: Esc.cpp  Esc.h
src/QiTianFlightControl/main/GPS/: GPS.cpp  GPS.h
src/QiTianFlightControl/main/Gyro/: Gyro.cpp  Gyro.h  mpu6050.cpp
src/QiTianFlightControl/main/Log/: Log.cpp  Log.h
src/QiTianFlightControl/main/QuadDriver/: QuadDriver.cpp  QuadDriver.h
src/QiTianFlightControl/main/Receiver/: MsgTransmitter.cpp  MsgTransmitter.h  Receiver.cpp  Receiver.h
src/QiTianFlightControl/main/include/: mpu6050.hpp
(+57 files in other folders)
