idf_component_register(SRCS 
	"main.cpp" 
	"Log/Log.cpp"
	"Aircraft/Aircraft.cpp"
	"Barometer/Barometer.cpp"
	"Compass/Compass.cpp"
	"Driver/PostionPIDCtr.cpp"
	"QuadDriver/QuadDriver.cpp"
	"Esc/Esc.cpp"
	"GPS/GPS.cpp"
	"Gyro/Gyro.cpp"
	"i2c.cpp"
	"Gyro/kalmanfilter.cpp"
	"Gyro/mpu6050.cpp"
	"Gyro/MPU6050.cpp"
	"Receiver/Receiver.cpp"
	"Receiver/MsgTransmitter.cpp"
	INCLUDE_DIRS 
	"Aircraft"
	"Barometer"
	"Compass"
	"Driver"
	"QuadDriver"
	"Esc"
	"GPS"
	"Gyro"
	"Log"
	"Receiver"
	"include")